Segundo curso completo.

--- a/index.html
+++ b/index.html
@@ -48,13 +48,8 @@
 		
 	</main>
 	<footer>
-		<div class="footer">
-		  <p>Barbearia Alura</p>
-		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
-		  <p>In non tempor elit. Aliquam eget laoreet lorem. </p>
-		  <p>Aliquam eget laoreet lorem. Ut luctus tristique lectus.</p>
-		  <p>Maecenas sit.</p>
-		</div>
+		<img src="src/logo-branco.png" alt="Logo rodapé">
+		<p>&copy; Copyright Barbearia Alura – 2019</p>	
 	</footer>
 </body>
 </html>
