--- a/produtos.html
+++ b/produtos.html
@@ -35,7 +35,7 @@
 				<p class="produto-preco">R$ 28,00</p>
 			</li>
 			<li>
-				<h2>Cabelo & Barba</h2>
+				<h2>Cabelo+Barba</h2>
 				<img src="src/cabelo+barba.jpg" alt="Corte de cabelo e barba">
 				<p  class="produto-descricao">Lorem ipsum dolor</p>
 				<p class="produto-preco">R$ 55,00</p>
@@ -43,7 +43,8 @@
 		</ul>
 	</main>
 	<footer>
-		
+		<img src="src/logo-branco.png" alt="Logo rodapé">
+		<p>&copy; Copyright Barbearia Alura – 2019</p>		
 	</footer>
 </body>
 </html>
