Form de contato, parte 1.

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
-	<link rel="stylesheet" type="text/css" href="style/produtos.css">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Produtos - Barbearia Alura</title>
 </head>
 <body>
@@ -21,7 +21,18 @@
 		</div>
 	</header>
 	<main>
+		<form>
+			<label for="nome">Nome completo:</label>
+			<input type="text" name="nome" id="nome">
 
+			<label for="email">e-mail:</label>
+			<input type="text" name="email" id="email">
+
+			<label for="telefone">Telefone:</label>
+			<input type="text" name="telefone" id="telefone">
+
+			<input id="botao" type="submit" name="enviar" value="Enviar">
+		</form>
 	</main>
 	<footer>
 		<img src="src/logo-branco.png" alt="Logo rodapé">
