--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
-	<link rel="stylesheet" href="style/produtos.css">
 	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="style/style-home.css">
 	<title>Barbearia Alura</title>
 </head>
 <body>
