--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
-	<link rel="stylesheet" type="text/css" href="style/produtos.css">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Produtos - Barbearia Alura</title>
 </head>
 <body>
