Iniciando curso 4, ajustes de css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" href="style/style.css">
-	<link rel="stylesheet" href="style/style-home.css">
 	<title>Barbearia Alura</title>
 </head>
 <body>
@@ -20,12 +19,12 @@
 		    </nav>
 		</div>
 	</header>
+			
+	<img src="src/banner.jpg" class="banner">
+	
 	<main>
-		<div >
-			<img src="src/banner.jpg" class="banner">
-		</div>
-		<div class="principal">
-			<h2 class="text-align-center">Sobre a Barbearia Alura</h2>
+		<section class="principal">
+			<h2 class="titulo-principal">Sobre a Barbearia</h2>
 			<br>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Proin convallis bibendum efficitur.</strong> Ut eget tristique erat, ut maximus dui. Donec condimentum dapibus volutpat. Phasellus bibendum justo sit amet metus condimentum, nec bibendum dolor malesuada. Pellentesque faucibus erat at metus consequat, sit amet tempor ex maximus. Nam non quam in turpis cursus efficitur nec nec arcu. Donec luctus porta quam eget maximus. In pulvinar posuere urna ac consectetur. Praesent bibendum, nunc sed viverra condimentum, diam dui faucibus diam, quis pulvinar dolor ex dignissim nisl. Etiam nec purus ut tortor fringilla dictum ac interdum massa.
@@ -33,9 +32,9 @@
 			<p>
 				Duis sed purus vel mauris pretium mattis. Integer tincidunt eget tellus ac sollicitudin. Aliquam erat volutpat. Mauris placerat, est et venenatis hendrerit, diam urna vehicula sapien, molestie sagittis nisi orci sit amet massa. Morbi sagittis, urna nec commodo sodales, diam massa molestie sem, id aliquet metus est eu odio. Nam condimentum turpis purus, at tempus turpis consectetur sed. <em><strong>Nunc sed enim vehicula, congue sem in, pretium nibh.</strong></em> Aenean pretium magna libero, et ultricies augue efficitur a. Mauris finibus mi at ex tristique dictum. Duis et congue odio, non volutpat odio. Duis et arcu convallis, porttitor velit in, accumsan nunc. Vivamus neque nibh, elementum id est sit amet, ullamcorper lacinia mi.
 			</p>
-		</div>
-		<div class="servico">
-			<h3 class="text-align-center">Serviços da Barbearia Alura</h3>
+		</section>
+		<section class="servico">
+			<h3 class="titulo-principal">Serviços da Barbearia</h3>
 			<br>
 			<ul>
 				<li>Lorem ipsum dolor sit amet.</li>
@@ -44,7 +43,7 @@
 				<li>Lorem ipsum dolor sit.</li>
 			</ul>
 			<img src="src/bannerServicos.jpg" class="bannerServico">
-		</div>
+		</section>
 		
 	</main>
 	<footer>
