Incluindo fonte externa, google fontes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" href="style/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<title>Barbearia Alura</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
 	<main>
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Barbearia</h2>
-			<br>
+			<img class="utensilios" src="src/utensilios2.jpg" alt="Utensílios de Barbearia">
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Proin convallis bibendum efficitur.</strong> Ut eget tristique erat, ut maximus dui. Donec condimentum dapibus volutpat. Phasellus bibendum justo sit amet metus condimentum, nec bibendum dolor malesuada. Pellentesque faucibus erat at metus consequat, sit amet tempor ex maximus. Nam non quam in turpis cursus efficitur nec nec arcu. Donec luctus porta quam eget maximus. In pulvinar posuere urna ac consectetur. Praesent bibendum, nunc sed viverra condimentum, diam dui faucibus diam, quis pulvinar dolor ex dignissim nisl. Etiam nec purus ut tortor fringilla dictum ac interdum massa.
 			</p>
