--- a/produtos.html
+++ b/produtos.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style/reset.css">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<title>Produtos - Barbearia Alura</title>
 </head>
 <body>
